--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
     height: 75%;
     border-radius: 10px;
     box-shadow: inset 0 -5px 5px rgba(0, 0, 0, 0.1), 0 5px 10px rgba(0, 0, 0, 0.1), 0 10px 15px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
 
 .change_volume_bar_avant {
@@ -204,6 +205,7 @@ body {
     height: 7px;
     border-radius: 10px;
     box-shadow: inset 0 -5px 5px rgba(0, 0, 0, 0.1), 0 5px 10px rgba(0, 0, 0, 0.1), 0 10px 15px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
 
 .prog_avant {
